--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,113 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Poppins:wght@300;400;600;700&display=swap'); */
+
+body{
+    margin: 0;
+    padding: 0;
+    font-family: Inter;
+    /* display: flex; */
+    /* justify-content: center;
+    align-items: center; */
+    margin: auto auto;
+    /* background-color: antiquewhite; */
+    
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.nav-bar{
+    background-color: #F55A5A;
+    display: flex;
+    align-items: center;
+    height: 55px;
+    gap: 5px;
+    justify-content: center;
+    
 }
+
+.card-container{
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+}
+
+.card{
+    display: flex;
+    width: 550px;
+    align-items: start;
+    margin: 30px;
+    gap: 20px;
+}
+
+.details{
+    margin: auto 0;
+}
+
+.nav--earth{
+    width: 15px;
+}
+
+.nav--heading{
+    color: white;
+    font-size: 15px;
+    /* word-spacing: .4rem; */
+}
+
+.card--image{
+    width: 125px;
+    border-radius: 5px;
+}
+
+.place-marker{
+    width: 12px;
+    margin-top: 3px;
+}
+
+.card--location{
+    display: flex;
+    gap: 5px;
+    align-items: center;
+}
+
+.card--place{
+    font-size: 25px;
+    font-weight: bold;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+
+.card--discription{
+    font-size: 10px;
+}
+
+.card--date{
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.card--counrty{
+    margin-right: 15px;
+}
+
+a:link{
+    color: gray;
+    text-decoration: underline;
+    font-size: 14px;
+}
+
+a:visited{
+    color: gray;
+}
+
+.cart{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.linebreak{
+    width: 550px;
+    height: 1px;
+    background-color: rgb(197, 197, 197);
+}
+
+/* .nav-bar{
+    width: 100vw;
+} */
